# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  background.cpp  readme.MD  test.sh
include/: api.hpp  app.hpp  background.hpp  camera.hpp  film.hpp  orthographic_camera.hpp  param_set.hpp  parser.hpp  perspective_camera.hpp  plane.hpp  primitive.hpp  ray.hpp  scene.hpp  sphere.hpp  triangle.hpp
include/cameras/: camera.hpp  orthographic_camera.hpp  perspective_camera.hpp
include/integrators/: blinnphong_integrator.hpp  integrator.hpp  raycast_integrator.hpp
include/lights/: ambient_light.hpp  direcional_light.hpp  light.hpp  point_light.hpp  spot_light.hpp
include/materials/: blinnphong_material.hpp  flat_material.hpp  material.hpp
include/primitives/: aggregate_primitive.hpp  geometric_primitive.hpp  prim_list.hpp  primitive.hpp
include/shapes/: cube.hpp  plane.hpp  pyramid.hpp  shape.hpp  sphere.hpp
libs/lodepng/: lodepng.cpp
libs/math/: math.cpp  math.hpp  vec3.cpp
scenes/: abismo.xml  all_lights.xml  all_lights2.xml  all_orthographic.xml  all_perspective.xml  ambient.xml  arcane_shrine.xml  aurora_podium.xml  bp_integrator-pool.xml  canion.xml  cidade.xml  circle.xml  cityscape_night.xml  clean_orthographic.xml  clean_perspective.xml  cool_scene.xml  cool_scene2.xml  corredor.xml  cotton_candy.xml  crepusculo.xml  crystal_cave.xml  crystal_corridor.xml  ct_scene.xml  demo_all_lights.xml  depth_corridor.xml  desert_mech_ruins.xml  flat_spheres_perspective.xml  forja_neon.xml  galaxy_core.xml  galeria_minimalista.xml  geometry_all.xml  glass_city_pyramids.xml  gobo.xml  hall_spotlights.xml  helice.xml  labirinto.xml  mirror_orbit.xml  monolith.xml  monolito.xml  neon.xml  (+41 more)
source/: api.cpp  app.cpp  background.cpp  film.cpp  main.cpp  param_set.cpp  parser.cpp  plane.cpp  sphere.cpp  triangle.cpp
